src/tests/snapshots/mu__tests__assignment__assign.snap
---
source: src/tests/assignment.rs
expression: snapshot
---
# Input:
v := 10
v = 5
print v


# Result (success):
none

# Stdout:
5


